<resources>
    <string name="app_name" translatable="false">Kamaii</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoibXVsdGlzY29wZSIsImEiOiJja2NmejVhbWIwbXo1MnNwYmlpczkwYnBtIn0.PMvLaUNpYuEP_Pso1WI-RA</string>
    <string name="placekey" translatable="false">AIzaSyCIpO2XuPQr8HDOg92EU0pRkP0G9rKvFoY</string>
    <string name="directionkey" translatable="false">AIzaSyAEky8tA0ic4CwaS1ZcKGc-e3BYRHYDzlQ</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="intro_1">Welcome..</string>
    <string name="intro_2">Welcome..</string>
    <string name="intro_3">Welcome…</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="closeMsg">Are your sure you want to close Kamaii?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="jobs_completed">Orders Completed</string>
    <string name="jobs_completed_single">Order Completed</string>
    <string name="completion">% Completion</string>
    <string name="hr_add_on">/hr</string>
    <string name="fixed_rate_add_on">fixed rate</string>
    <string name="reviews">REVIEW(</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter comment</string>
    <string name="take_image">FabCustomer : Take Image From</string>
    <string name="select_picture">Select Picture</string>
    <string name="search_destination">Add Address</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_address">Please select address.</string>
    <string name="val_title">Please enter title.</string>
    <string name="val_description">Please enter description</string>
    <string name="select_category">Select Category</string>
    <string name="val_email">Please enter email id.</string>
    <string name="val_mobile">Please Enter Valid Mobile No.</string>
    <string name="my_bookings">My Orders</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="cash_msg">Are you sure want to do cash payment?</string>
    <string name="val_category">Please select category.</string>
    <string name="val_price">Please enter price.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_name">Please enter name.</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="decline">Declined</string>
    <string name="decline_msg">Are you sure you want to decline this appointment?</string>
    <string name="waiting_artist">Waiting for service provider response</string>
    <string name="request_acc">Order accepted by service provider</string>
    <string name="invoice_genrate">Invoice Generated</string>
    <string name="invoice_paid">Invoice Paid</string>
    <string name="booking_cancel_msg">Are you sure to cancel Order with</string>
    <string name="date">Date:</string>
    <string name="applied">Applied</string>
    <string name="applied1">Applied:</string>
    <string name="confirm">Confirmed</string>
    <string name="complete">Complete</string>
    <string name="inprogress">Inprogress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="confirm_msg">Are you sure you want to confirm the application?</string>
    <string name="complete_msg">Are you sure you want to complete the application?</string>
    <string name="km">kms</string>
    <string name="job_id">Job Id:</string>
    <string name="open">Open</string>
    <string name="not_edit_job">You can\'t edit this job because Service Provider have already applied</string>
    <string name="delete">Delete</string>
    <string name="delete_job">Are you sure to delete this job?</string>
    <string name="complete_job">Are you sure to complete this job?</string>
    <string name="service">Invoice Id #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">Duration:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="future_bookings">Future Bookings</string>
    <string name="all_category">All Categories</string>
    <string name="get_discount">Get Offer</string>
    <string name="code_copy">Code Copy</string>
    <string name="my_code">Hello, this is my Referral Code</string>
    <string name="opps_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="invoice">Invoice</string>
    <string name="ic_wallet">Wallet</string>
    <string name="fabartist">Kamaii</string>
    <string name="jobs">Post Jobs</string>
    <string name="notification">Notifications</string>
    <string name="app_update">About Us</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sign_up">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="applied_job">Applicants</string>
    <string name="search_by_artist">Search by Service Provider</string>
    <string name="search_by_name">Search for food</string>
    <string name="search_by_vendor">Search Partners</string>
    <string name="search_by_item">Search Item</string>
    <string name="no_application_found">No Application Found</string>
    <string name="book_now">BOOK NOW</string>
    <string name="quick_chat">Quick Chat</string>
    <string name="future_book">FUTURE BOOK</string>
    <string name="about">About</string>
    <string name="qualification">Qualification</string>
    <string name="book_service">BOOK SERVICES</string>
    <string name="no_chat_history_found">No Chat History Found</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="update_job">Update Job</string>
    <string name="all_categories">All Categories</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="update_picture">Update Picture</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">SUBMIT</string>
    <string name="apply_code">APPLY CODE</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="no_booking_found">No Order Found</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="payment">Payment</string>
    <string name="work_completed">Work Completed</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="write_code_here">Write Code Here</string>
    <string name="total_amount">Total Amount</string>
    <string name="online_payment">Debit Card/NetBanking/Wallet</string>
    <string name="or">OR</string>
    <string name="cash_payment1">Cash Payment</string>
    <string name="post_job">My Job</string>
    <string name="budget">Budget</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change">Change</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="password_change">Change Password</string>
    <string name="set_address">Set Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="set_location">Set Location</string>
    <string name="signout">SignOut</string>
    <string name="payment_info">Payment Information</string>
    <string name="promotion">Promotion</string>
    <string name="apply_code1">Apply Code</string>
    <string name="forgotten_password">Forgot Password?</string>
    <string name="your_review">Your Review*</string>
    <string name="services_type">Services type:</string>
    <string name="accept">Accept</string>
    <string name="reject1">Reject</string>
    <string name="artist_will_soon">Service Provider will soon</string>
    <string name="complete1">Complete</string>
    <string name="edit">Edit</string>
    <string name="decline1">Decline</string>
    <string name="cancel_booking">Cancel Order</string>
    <string name="working_time">Working Time</string>
    <string name="finish_job">Finish Job</string>
    <string name="delete1">Delete</string>
    <string name="pay_now">Pay now</string>
    <string name="rate_now">Rate now</string>
    <string name="review_by">Review By</string>
    <string name="jobs_done">Jobs Done</string>
    <string name="completion1">Completion</string>
    <string name="get_your_best_service_from_us">Get your best service from us</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="cancel1">Cancel</string>
    <string name="add">ADD</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="payment_option">Payment Option</string>
    <string name="select">Select</string>
    <string name="no_appointment_found">No Appointment Found</string>
    <string name="no_category_found">No Category Found</string>
    <string name="no_sub_category_found">No service available for your location.</string>
    <string name="service_not_available">This service is not available at your location.</string>
    <string name="nearby">Nearby</string>
    <string name="discover">Discover</string>
    <string name="search_by_job">Search by Job Title</string>
    <string name="no_jobs_found">No Jobs Found</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="circle_square">CIRCLE_SQUARE</string>
    <string name="search_by_invoice">Search by Invoice Id</string>
    <string name="no_history_found">No History Found</string>
    <string name="no_ticket_found">No Ticket Found</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="add_money">Add Money</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="home_features">Home Features</string>
    <string name="bookings">Bookings</string>
    <string name="personal">Personal</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="addrefer">Add Refer Friend</string>
    <string name="viewrefer">View Friends Earning</string>
    <string name="my_earnings">Earning Cashback</string>
    <string name="_2_add_money_extra_charges">Add Money Extra Charges</string>
    <string name="_1000">+ ₹ 1000</string>
    <string name="_1500">+ ₹ 1500</string>
    <string name="_2000">+ ₹ 2000</string>
    <string name="webknight_infosystem">WebKnight Infosystem</string>
</resources>