<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home_features"
        android:title="@string/home_features">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_homenavi"
                android:title="@string/home" />

            <item
                android:id="@+id/nav_chat"
                android:visible="false"
                android:icon="@drawable/ic_chat"
                android:title="@string/chats" />

        </menu>
    </item>
    <item
        android:id="@+id/nav_bookings_and_job"
        android:title="@string/bookings">
        <menu>
            <item
                android:id="@+id/nav_booking"
                android:icon="@drawable/ic_booking"
                android:title="@string/my_bookings" />

            <item

                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/invoice" />
            <item
                android:id="@+id/nav_jobs"
                android:icon="@drawable/ic_jobs"
                android:title="@string/jobs"
                android:visible="false" />
            <item
                android:id="@+id/nav_appointment"
                android:icon="@drawable/ic_appointment"
                android:title="@string/future_bookings"
                android:visible="false" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_refer"
        android:title="@string/refer">
        <menu>
            <item
                android:id="@+id/nav_addrefer"
                android:icon="@drawable/addrefer"
                android:title="@string/addrefer" />

            <item
                android:id="@+id/nav_viewerefer"
                android:icon="@drawable/viewrefer"
                android:title="@string/viewrefer" />
            <item
                android:id="@+id/nav_earning"
                android:icon="@drawable/ic_earning"
                android:title="@string/my_earnings"
                android:visible="false" />
        </menu>
    </item>


    <item
        android:id="@+id/nav_personal"
        android:title="@string/personal">
        <menu>


            <item
                android:id="@+id/nav_profilesetting"
                android:icon="@drawable/ic_settings"
                android:title="@string/profile_settings" />
            <item
                android:id="@+id/nav_wallet"
                android:icon="@drawable/ic_wallet"
                android:title="@string/ic_wallet" />
        </menu>
    </item>

    <item
        android:id="@+id/other"
        android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notification"
                android:title="@string/notification" />


            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/help"
                android:title="Help" />
            <item
                android:id="@+id/nav_discount"
                android:icon="@drawable/ic_discount"
                android:title="@string/get_discount"
                android:visible="false" />
            <item
                android:id="@+id/nav_tickets"
                android:icon="@drawable/ic_ticket"
                android:title="@string/support"
                android:visible="false" />

            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_about"
                android:title="@string/app_update" />

            <item
                android:id="@+id/signout"
                android:icon="@drawable/logout"
                android:title="@string/signout" />
        </menu>
    </item>

    <item android:title="">

        <item
            android:id="@+id/nav_madeindia"
            android:title="MADE IN INDIA" />


    </item>
</menu>