<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/headergradient">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:contentDescription="@string/webknight_infosystem"
                android:src="@drawable/back" />

            <com.kamaii.customer.utils.CustomTextViewBold
                android:id="@+id/tvNameHedar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_money"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">

            <com.kamaii.customer.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/wallet_balance"
                android:textSize="16sp" />

            <com.kamaii.customer.utils.CustomTextView
                android:id="@+id/tvWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llOne"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.kamaii.customer.utils.CustomEditText
                android:id="@+id/etAddMoney"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.kamaii.customer.utils.CustomTextView
                android:id="@+id/txtptypemsssg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/_2_add_money_extra_charges"
                android:textColor="@color/black"
                android:textSize="10dp">

            </com.kamaii.customer.utils.CustomTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/button_selector_line"
                        android:orientation="vertical">

                        <com.kamaii.customer.utils.CustomTextView
                            android:id="@+id/tv1000"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/_1000"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/button_selector_line"
                        android:orientation="vertical">

                        <com.kamaii.customer.utils.CustomTextView
                            android:id="@+id/tv1500"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/_1500"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/button_selector_line"
                        android:orientation="vertical">

                        <com.kamaii.customer.utils.CustomTextView
                            android:id="@+id/tv2000"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/_2000"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>

                <com.kamaii.customer.utils.CustomButton
                    android:id="@+id/cbAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_selector3"
                    android:text="@string/add_money"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</layout>