<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dialog_back"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_back_blue">

            <com.kamaii.customer.utils.CustomTextViewBold
                android:id="@+id/ctvbTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/set_address"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <com.kamaii.customer.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.kamaii.customer.utils.CustomEditText
                    android:id="@+id/etAddressD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_address"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:editable="false"
                    android:focusable="false"
                    android:text="" />

            </com.kamaii.customer.utils.InputOpenFieldView>

            <com.kamaii.customer.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.kamaii.customer.utils.CustomEditText
                    android:id="@+id/etCityD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="" />

            </com.kamaii.customer.utils.InputOpenFieldView>

            <com.kamaii.customer.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.kamaii.customer.utils.CustomEditText
                    android:id="@+id/etCountryD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="" />

            </com.kamaii.customer.utils.InputOpenFieldView>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.kamaii.customer.utils.CustomTextViewBold
                android:id="@+id/tvYesAddress"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />

            <com.kamaii.customer.utils.CustomTextViewBold
                android:id="@+id/tvNoAddress"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cancel1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>