<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/share_services_child_relative"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/dimen_5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back_cash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/webknight_infosystem"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <com.kamaii.customer.utils.CustomTextViewBold
                android:id="@+id/txt_name_cash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/img_back_cash"
                android:gravity="center_vertical"
                android:paddingTop="3dp"
                android:text=""
                android:textColor="@color/dark_blue_color"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone">


        <com.kamaii.customer.utils.CustomEditText
            android:id="@+id/etSearchFilter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_cate_background"
            android:drawableLeft="@drawable/ic_baseline_search_18"
            android:drawablePadding="@dimen/dimen_5dp"
            android:gravity="center_vertical"
            android:hint="@string/search_by_name"
            android:padding="@dimen/dimen_5dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:textSize="16sp" />
    </LinearLayout>

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/share_services_child_relative"
        android:layout_weight="1"
        android:background="#F8FAFB"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:scrollbars="none">-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="10dp"
        android:layout_below="@id/share_services_child_relative"
        android:divider="@color/white"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        tools:listitem="@layout/custom_cashback_recycle_layout" />


    <!--
        </ScrollView>
    -->

    <com.kamaii.customer.utils.CustomTextViewBold
        android:id="@+id/tvNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_sub_category_found"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="gone" />
</RelativeLayout>